adjust footer layout and icons, overlay menu hover animation and remove footer-reveal.js

--- a/app/index.html
+++ b/app/index.html
@@ -74,9 +74,9 @@
     
                                     <div class="nav-sublinks js-nav-animate">
                                         <div class="js-nav-animate">
-                                            <a class="nav-link nav-sublink" href="/moving-letters/">Nike Kobe Mentu</a>
-                                            <a class="nav-link nav-sublink" href="/typesource/">Axe Effect</a>
-                                            <a class="nav-link nav-sublink" href="/spinkit/">Quaker Oats</a>
+                                            <a class="nav-link nav-sublink" href="https://cargocollective.com/johnmilnerportfolio/Nike-Kobe-Mentu" target="blank">Nike Kobe Mentu</a>
+                                            <a class="nav-link nav-sublink" href="https://cargocollective.com/johnmilnerportfolio/Axe-Lynx-Labs" target="blank">Axe Effect</a>
+                                            <a class="nav-link nav-sublink" href="https://cargocollective.com/johnmilnerportfolio/Nokia-Meet-Your-City" target="blank">Nokia MYC</a>
                                         </div>
                                     </div>
                                 </div>
@@ -401,15 +401,11 @@
                                 <source src="assets/video/love-coding.webm" type="video/webm"> Your browser is not supported!
                             </video>
                         </div>
-                        <h3 class="cta">I design and build digital products.</h3>
+                        <h3 class="cta">I design and build for the web.</h3>
                         <div id="profile-foto" class="profile-foto"></div>
                         <p class="bio">
-                            John Milner is a web developer and digital creative based in San Diego, California. He has award-winning experience working
-                            across global and regional campaigns for clients such as Nike, Nokia, Axe (Lynx), Bud Light,
-                            Quaker, and Ad Council. He is well-versed across all platforms and believes emotion and story
-                            are fundamental to creating fresh brand-driven content and interactions. His work bridges culture,
-                            design and technology from interactive, mobile and social to gaming, film and television -- with
-                            a focus on creating holistic, engaging and entertaining brand experiences.
+                            John Milner is a web developer and digital creative based in San Diego, California. Leveraging a diverse background as digital producer, writer and front-end web developer at the intersection of culture, design and technology, he has brought to life award-winning digital advertising campaigns at creatively-driven advertising agencies like W+K and EnergyBBDO for clients such as Nike, Nokia, Axe (Lynx), Bud Light, Quaker, and Ad Council. John is well-versed across all digital touchpoints and believes emotion and story
+                            are fundamental to creating fresh content and interactions. In his free time, you can find him relaxing at the beach, on the tennis court doing his best Roger Federer impression or reading up on the latest Web Standards.
                         </p>
                     </div>
                 </div>
