--- a/app/index.html
+++ b/app/index.html
@@ -438,9 +438,9 @@
                         <div class="col-1-of-2">
                             <p class="footer__copyright">
                                 Built from scratch with
-                                <span class="icon icon--heart animated pulse infinite"></span> by John Milner, using HTML5, CSS3, Vanilla Javascript and JQuery. Want to collaborate
+                                <span class="icon icon--heart animated pulse infinite"></span> by John Milner, using HTML5, CSS3, Vanilla Javascript, JQuery and Animejs. Want to collaborate
                                 on a big project? Just here to say hi? Whatever the reason, feel free to contact me!
-                                <a href="#" class="footer__link">Let's Talk!</a>
+                                <a href="mailto: john.milner@mac.com" class="footer__link">Let's Talk!</a>
                             </p>
 
                         </div>
