refactor scss deleting unsused css

--- a/app/index.html
+++ b/app/index.html
@@ -400,7 +400,7 @@
                                     <source src="assets/video/love-coding.webm" type="video/webm"> Your browser is not supported!
                                 </video>
                             </div>
-                            <h3 class="cta">I design and build for the web.</h3>
+                            <h3 class="cta">I design and build digital products.</h3>
                             <div id="profile-foto" class="profile-foto"></div>
                             <p class="bio">
                                 John Milner is a web developer and digital creative based in San Diego, California. Leveraging a diverse background as digital
