implement icon animation bg-header

--- a/app/index.html
+++ b/app/index.html
@@ -105,7 +105,7 @@
                                                   <i class="devicon devicon-nodejs-plain colored"></i>
                                                   <i class="devicon devicon-github-plain colored"></i>
                                                   <i class="devicon devicon-html5-plain colored"></i>
-                                                  <i class="devicon devicon-firefox-plain colored"></i>
+                                                  <i class="devicon devicon-chrome-plain colored"></i>
                                                   <i class="devicon devicon-heroku-original colored"></i>
                                                   <i class="devicon devicon-javascript-plain colored"></i>
                                                   <i class="devicon devicon-linux-plain colored"></i>
