tidy up white pastel design

--- a/app/index.html
+++ b/app/index.html
@@ -146,7 +146,7 @@
                                                 </div>
                                               </div>
                                             </header>
-                                          </div>
+                                    </div>
                             </div>
                             <article>
                                 <div class="tagline">
@@ -166,8 +166,7 @@
 
                     <section>
                         <div class="row">
-                            <div id="projects"></div>
-                            <div class="projects">
+                            <div class="projects" id="projects">
                                 <a class="js-scroll-trigger" href="#button-wrapper">
                                     <h5 class="">Projects</h5>
                                 </a>
