--- a/app/index.html
+++ b/app/index.html
@@ -45,10 +45,13 @@
                             <div class="menu-animation-wrapper">
                                 <div class="menu-animated-background"></div>
                             </div>
-                            <a class="menu animated pulse infinite">
-                                <span class="menu-icon-line-1 menu-icon-line"></span>
+                            <a class="menu">
+                                <div class="menu__button">
+                                    <span class="menu__icon">&nbsp;</span>
+                                </div>
+                                <!-- <span class="menu-icon-line-1 menu-icon-line"></span>
                                 <span class="menu-icon-line-2 menu-icon-line"></span>
-                                <span class="menu-icon-line-3 menu-icon-line"></span>
+                                <span class="menu-icon-line-3 menu-icon-line"></span> -->
                             </a>
 
                             <div class="nav js-nav">
