tidy up projects animation and font, mixitup button hover ani, svg animation and add pointer-events: auto to section

--- a/app/index.html
+++ b/app/index.html
@@ -163,7 +163,7 @@
              
             <main>
                 <section>
-                    <div class="projects animated pulse infinite" id="projects">
+                    <div class="projects animated bounceIn infinite" id="projects">
                         <a class="js-scroll-trigger" href="#button-wrapper">
                             <h5 class="">Projects</h5>
                         </a>
