remove target blank from sub nav links

--- a/app/index.html
+++ b/app/index.html
@@ -75,9 +75,9 @@
 
                         <div class="nav-sublinks js-nav-animate">
                             <div class="js-nav-animate">
-                                <a class="nav-link nav-sublink" href="https://cargocollective.com/johnmilnerportfolio/Nike-Kobe-Mentu" target="blank">Nike Kobe Mentu</a>
-                                <a class="nav-link nav-sublink" href="https://cargocollective.com/johnmilnerportfolio/Axe-Lynx-Labs" target="blank">Axe Effect</a>
-                                <a class="nav-link nav-sublink" href="https://cargocollective.com/johnmilnerportfolio/Nokia-Meet-Your-City" target="blank">Nokia MYC</a>
+                                <a class="nav-link nav-sublink" href="https://cargocollective.com/johnmilnerportfolio/Nike-Kobe-Mentu">Nike Basketball</a>
+                                <a class="nav-link nav-sublink" href="https://cargocollective.com/johnmilnerportfolio/Axe-Lynx-Labs">Axe Effect</a>
+                                <a class="nav-link nav-sublink" href="https://cargocollective.com/johnmilnerportfolio/Nokia-Meet-Your-City">Nokia</a>
                             </div>
                         </div>
                     </div>
