implement bouncing ball footer

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
     <link rel="icon" type="image/png" href="assets/images/icon.png">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <!-- build:css assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
@@ -455,7 +457,7 @@
         </main>
         <div id="contact"></div>
         <footer>
-            <section class="footer">
+            <section class="footer we-create">
                 <div class="row">
                     <div class="col-1-of-2">
                         <div class="footer__navigation">
