implement footer media queries for responsive

--- a/app/index.html
+++ b/app/index.html
@@ -457,7 +457,7 @@
         </main>
         <div id="contact"></div>
         <footer>
-            <section class="footer we-create">
+            <section class="footer create-particles">
                 <div class="row">
                     <div class="col-1-of-2">
                         <div class="footer__navigation">
