add row id for pointer events for phone responsive media query in footer

--- a/app/index.html
+++ b/app/index.html
@@ -458,7 +458,7 @@
         <div id="contact"></div>
         <footer>
             <section class="footer create-particles">
-                <div class="row">
+                <div class="row" id="ps">
                     <div class="col-1-of-2">
                         <div class="footer__navigation">
                             <div class="social-icons">
