--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     />
     <link href='https://fonts.googleapis.com/css?family=Raleway:800,100' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans:700" rel="stylesheet">
     <title>John Milner Web Development Portfolio</title>
     <link rel="icon" type="image/png" href="assets/images/icon.png">
 
@@ -158,17 +158,16 @@
                         <h1 class="main-headline-r2">John Milner</h1>
                     </div>
                 </article>
-                
+
             </header>
              
             <main>
                 <section>
-                    <div class="projects animated bounceIn infinite" id="projects">
-                        <a class="js-scroll-trigger" href="#button-wrapper">
-                            <h5 class="">Projects</h5>
-                        </a>
+                    <div class="row" id="projects">
+                            <a class="btn-liquid js-scroll-trigger" href="#button-wrapper">
+                                <span class="inner">Projects</span>
+                            </a>
                     </div>
-
                     <div id="button-wrapper">
                         <div class="button-bar">
                             <button class="filter-btn" data-filter="all">Show all</button>
